--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html {
 
   body{
     background: rgb(251,177,23);
-background: linear-gradient(0deg, rgba(251,177,23,1) 0%, rgba(215,100,38,1) 100%);
+background: linear-gradient(0deg, rgba(251,177,23,1) 0%, rgba(215,100,38,1) 50%, rgba(113,15,17,1) 100%);
     font-family: 'Lato', sans-serif;
       font-weight: 300;
       letter-spacing: -.02rem;
@@ -53,12 +53,16 @@ background: linear-gradient(0deg, rgba(251,177,23,1) 0%, rgba(215,100,38,1) 100%
     font-style: oblique;
     font-size: 30px;
     line-height: normal;
+    color: #fff;
 }
   p {
     padding: 0;
     font-size: 16px;
     line-height: 2;
     font-weight: 400;
+  }
+  section {
+    display: flex;
   }
 
   a {
@@ -75,12 +79,11 @@ background: linear-gradient(0deg, rgba(251,177,23,1) 0%, rgba(215,100,38,1) 100%
 
   .container{
     max-width: 70rem;
-    margin: 0 auto;
-    
+    margin: 0 auto;    
 }
 .header{
     position: sticky;
-    top: 0; 
+    top: 0;
 }
 .header__container{
     max-width: 100%;
