--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --white: #fff;
     --red: #710f11;
     --gray: #c9d5d6;
-    --dk-gray:#333333;
+    --dk-gray:#333;
 }
 
 html {
@@ -15,7 +15,7 @@ html {
 
   body{
     background: rgb(251,177,23);
-background: linear-gradient(0deg, rgba(251,177,23,1) 0%, rgba(215,100,38,1) 50%, rgba(113,15,17,1) 100%);
+background: linear-gradient(0deg, rgba(251,177,23,1) 0%, rgba(215,100,38,1) 75%, rgba(113,15,17,1) 100%);
     font-family: 'Lato', sans-serif;
       color: var(--dk-gray);
       line-height: 1.667;
@@ -58,8 +58,7 @@ background: linear-gradient(0deg, rgba(251,177,23,1) 0%, rgba(215,100,38,1) 50%,
 }
   p {
     padding: 0;
-    font-size: 16px;
-    line-height: 2;
+    font-size: 18px;
     font-weight: 400;
   }
   section {
@@ -81,7 +80,7 @@ background: linear-gradient(0deg, rgba(251,177,23,1) 0%, rgba(215,100,38,1) 50%,
   ul {
       list-style-type: none;
       text-align: left;
-      font-size: 16px;
+      font-size: 18px;
       margin: 0;
       padding: 0;
   }
@@ -92,7 +91,7 @@ background: linear-gradient(0deg, rgba(251,177,23,1) 0%, rgba(215,100,38,1) 50%,
 }
   .container{
     max-width: 70rem;
-    margin: 0 auto;    
+    margin: 50px auto;    
 }
 .header{
     position: sticky;
