--- a/style.css
+++ b/style.css
@@ -183,10 +183,18 @@ footer {
   display: flex;
   justify-content: center;
   padding: 30px auto;
+  text-align: center;
   color: var(--gray);
 }
 .footer_container {
   padding: 15px;
   max-width: 100%;
   background-color: #333;
+}
+#footer_text{
+  justify-content: center;
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+font-size: 10px;
 }
